--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-PORT = 4000
-
- MONGO_URI = mongodb://127.0.0.1:27017
+ PORT = 4000
+#  MONGO_URI = mongodb://127.0.0.1:27017
+ MONGO_URI = mongodb+srv://Dima:Dima@mern-app.qp7nlwc.mongodb.net/?retryWrites=true&w=majority
